# mushy-squid

./: .gitignore  TSPLIB95.md  pyproject.toml
config/: config.yml
results/: E-n101-k14.csv  E-n101-k8.csv  E-n22-k4.csv
results/0/: E-n101-k14_runs.csv  E-n101-k8_runs.csv  E-n13-k4_runs.csv  E-n13-k4_solutions.csv  E-n22-k4_runs.csv  E-n22-k4_solutions.csv  E-n23-k3_runs.csv  E-n23-k3_solutions.csv  E-n30-k3_runs.csv  E-n30-k3_solutions.csv  E-n31-k7_runs.csv  E-n31-k7_solutions.csv  E-n33-k4_runs.csv  E-n33-k4_solutions.csv  E-n51-k5_runs.csv  E-n51-k5_solutions.csv  E-n76-k10_runs.csv  E-n76-k10_solutions.csv  E-n76-k14_runs.csv  E-n76-k14_solutions.csv  E-n76-k7_runs.csv  E-n76-k7_solutions.csv  E-n76-k8_runs.csv  E-n76-k8_solutions.csv
src/: automate.py  main.py
src/algorithms/: ant.py  genetic.py  hybrid.py
src/utils/: config.py  fix_routes.py  ga_helpers.py  helpers.py  loader.py  models.py  parser.py  results.py
tests/: conftest.py  test_fix_routes.py  test_helpers.py
