[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mushy-squid"
version = "0.1.0"
description = "CVRP solver"
dependencies = ["numpy"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
